# src/routes/index.ts
@@ -1,10 +1,10 @@
 import { Router } from "express";
-import { categoriesRoutes } from "./categories.routes";
-import { specificationsRoutes } from "./specifications.routes";
+import { homeRoutes } from "./home.routes";
+import { newsRoutes } from "./news.routes";
 
 const router = Router();
 
-router.use("/categories" , categoriesRoutes);
-router.use("/specifications" , specificationsRoutes);
+router.use("/news" , newsRoutes);
+router.use("/home" , homeRoutes);
 
 export { router };
