# src/swagger.json
@@ -1,7 +1,7 @@
 {
     "openapi":"3.0.0",
     "info" : {
-        "title" : "RentalX Documentation",
+        "title" : "RentX Documentation",
         "description" : "This is an API Rent",
         "version" : "1.0.0",
         "contact" : {
@@ -71,6 +71,74 @@
                         }
                     }
                 }
+            }
+        },
+        "/categories/import" : {
+            "post" : {
+                "tags" : ["Category"],
+                "summary" : "Upload a new Category",
+                "description" : "Upload a new Category",
+                "requestBody" : {
+                    "content" :{
+                        "multipart/form-data" : {
+                            "schema" : {
+                                "type" : "object",
+                                "properties" : {
+                                    "file" : {
+                                        "type" :"string",
+                                        "format" : "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201" : {
+                        "description" : "Created"
+                    }
+                }
+            }
+        },
+        "specifications":{
+            "post" : {
+                "tags":["Specifications"],
+                "summary" : "Create a specification",
+                "description" : "Create a new specification",
+                "requestBody": {
+                    "content" : {
+                        "application/json": {
+                            "schema" : {
+                                "$ref" : "#/definitions/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses" : {
+                    "201": {
+                        "description" : "created"
+                    },
+                    "500":{
+                        "description": "Specification already exists"
+                    }
+                } 
+            }
+        }
+    },
+    "definitions": {
+        "Specification" : {
+            "type": "object",
+            "properties" :{
+                "name" : {
+                    "type" : "string"
+                },
+                "description": {
+                    "type" : "string"
+                }
+            },
+            "example" : {
+                "name": "Specification-Teste",
+                "description" : "Specification description sample"
             }
         }
     }
